--- a/inex.html
+++ b/inex.html
@@ -106,7 +106,7 @@
         <div class="coupon-code">
           <input id="coupon-code" type="text" placeholder="Coupon Code" />
           <button
-            onclick="updateGrandTotal('click from apply')"
+            onclick="grandTotalCost('click from apply')"
             id="apply-btn"
             class="apply-btn"
           >
